Partial added support for 4" retina display.

--- a/Donor/InfoSubViewController.xib
+++ b/Donor/InfoSubViewController.xib
@@ -362,11 +362,9 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUITextView" id="44443267">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<string key="NSFrameSize">{145, 29}</string>
-				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="479872571"/>
 				<bool key="IBUIClipsSubviews">YES</bool>
