--- a/Donor/StationReviewsViewController.xib
+++ b/Donor/StationReviewsViewController.xib
@@ -2,13 +2,13 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1536</int>
-		<string key="IBDocument.SystemVersion">11G56</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
+		<string key="IBDocument.SystemVersion">11G63</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2844</string>
 		<string key="IBDocument.AppKitVersion">1138.51</string>
 		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1926</string>
+			<string key="NS.object.0">1930</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
@@ -43,7 +43,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 480}</string>
 						<reference key="NSSuperview" ref="724625511"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -57,6 +57,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{109, 88}, {81, 21}}</string>
 						<reference key="NSSuperview" ref="724625511"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="126240376"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -87,6 +88,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{36, 55}, {18, 17}}</string>
 						<reference key="NSSuperview" ref="724625511"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="221404235"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -101,6 +103,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{11, 5}, {277, 37}}</string>
 						<reference key="NSSuperview" ref="724625511"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="148129478"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -133,6 +136,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{12, 50}, {301, 3}}</string>
 						<reference key="NSSuperview" ref="724625511"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="501597531"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -147,6 +151,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{12, 75}, {301, 3}}</string>
 						<reference key="NSSuperview" ref="724625511"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="430609408"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -158,6 +163,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{12, 113}, {301, 3}}</string>
 						<reference key="NSSuperview" ref="724625511"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="924791579"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -169,6 +175,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{84, 55}, {18, 17}}</string>
 						<reference key="NSSuperview" ref="724625511"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="60055455"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -180,6 +187,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{12, 55}, {18, 17}}</string>
 						<reference key="NSSuperview" ref="724625511"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="527187999"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -191,6 +199,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{60, 55}, {18, 17}}</string>
 						<reference key="NSSuperview" ref="724625511"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="693411447"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -202,6 +211,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{108, 55}, {18, 17}}</string>
 						<reference key="NSSuperview" ref="724625511"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="834651211"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -213,6 +223,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{192, 91}, {19, 16}}</string>
 						<reference key="NSSuperview" ref="724625511"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="694800455"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -227,6 +238,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 117}, {320, 255}}</string>
 						<reference key="NSSuperview" ref="724625511"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -245,6 +257,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{11, 54}, {122, 24}}</string>
 						<reference key="NSSuperview" ref="724625511"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="577267314"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -276,6 +289,7 @@
 				</array>
 				<string key="NSFrame">{{0, 44}, {320, 436}}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="1046958774"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -513,7 +527,66 @@
 			<nil key="sourceID"/>
 			<int key="maxID">39</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">StationReviewsViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="backButtonPressed:">id</string>
+						<string key="ratePressed:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="backButtonPressed:">
+							<string key="name">backButtonPressed:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="ratePressed:">
+							<string key="name">ratePressed:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="ratedStar1">UIImageView</string>
+						<string key="ratedStar2">UIImageView</string>
+						<string key="ratedStar3">UIImageView</string>
+						<string key="ratedStar4">UIImageView</string>
+						<string key="ratedStar5">UIImageView</string>
+						<string key="stationTitleLable">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="ratedStar1">
+							<string key="name">ratedStar1</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="ratedStar2">
+							<string key="name">ratedStar2</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="ratedStar3">
+							<string key="name">ratedStar3</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="ratedStar4">
+							<string key="name">ratedStar4</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="ratedStar5">
+							<string key="name">ratedStar5</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="stationTitleLable">
+							<string key="name">stationTitleLable</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/StationReviewsViewController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
@@ -528,6 +601,6 @@
 			<string key="ratedStarEmpty.png">{18, 17}</string>
 			<string key="reviewsIcon.png">{19, 16}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">1926</string>
+		<string key="IBCocoaTouchPluginVersion">1930</string>
 	</data>
 </archive>
