--- a/Donor/view/controller/info/contraindications/HSContraindicationsViewController.xib
+++ b/Donor/view/controller/info/contraindications/HSContraindicationsViewController.xib
@@ -44,6 +44,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 431}</string>
 						<reference key="NSSuperview" ref="344340179"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="122748558"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -62,6 +63,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, 46}, {320, 63}}</string>
 								<reference key="NSSuperview" ref="220681129"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="110528109"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -76,6 +78,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{160, 57}, {115, 31}}</string>
 								<reference key="NSSuperview" ref="220681129"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="312637107"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -120,6 +123,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{43, 57}, {118, 31}}</string>
 								<reference key="NSSuperview" ref="220681129"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="584813486"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -148,6 +152,7 @@
 						</array>
 						<string key="NSFrame">{{0, -44}, {320, 113}}</string>
 						<reference key="NSSuperview" ref="344340179"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="66479928"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="390335511">
@@ -161,6 +166,8 @@
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{20, 120}, {280, 70}}</string>
 						<reference key="NSSuperview" ref="344340179"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -189,6 +196,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{0, 57}, {320, 330}}</string>
 						<reference key="NSSuperview" ref="344340179"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="652841167"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="390335511"/>
@@ -203,6 +211,7 @@
 				</array>
 				<string key="NSFrame">{{0, 44}, {320, 387}}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="220681129"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -226,6 +235,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 63}</string>
 						<reference key="NSSuperview" ref="1015410080"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="206717818"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -237,6 +247,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{124, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1015410080"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="911899792"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -251,6 +262,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{143, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1015410080"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="283812233"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -262,6 +274,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{162, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1015410080"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="970708227"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -273,6 +286,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{181, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1015410080"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="994464334"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -284,6 +298,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{200, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1015410080"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="819873348"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -295,6 +310,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{219, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1015410080"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="27265"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -306,6 +322,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{238, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1015410080"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="585885198"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -317,6 +334,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{257, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1015410080"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="297680971"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -328,6 +346,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{86, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1015410080"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="635265749"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -339,6 +358,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{67, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1015410080"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="930222379"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -350,6 +370,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{10, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1015410080"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="572010088"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -364,6 +385,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{29, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1015410080"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="758013307"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -375,6 +397,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{48, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1015410080"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="77161683"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -386,6 +409,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{105, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1015410080"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="682537198"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -397,6 +421,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{276, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1015410080"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1070649414"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -408,6 +433,8 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{291, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1015410080"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -421,6 +448,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{17, 20}, {13, 16}}</string>
 						<reference key="NSSuperview" ref="1015410080"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="95572778"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -435,6 +463,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{38, 17}, {257, 24}}</string>
 						<reference key="NSSuperview" ref="1015410080"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="193606861"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -461,6 +490,7 @@
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{286, 19}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="1015410080"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="456495766"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -490,6 +520,7 @@
 				</array>
 				<string key="NSFrameSize">{320, 53}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="285118477"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="390335511"/>
@@ -504,6 +535,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 63}</string>
 						<reference key="NSSuperview" ref="1012111159"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="977281269"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -515,6 +547,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{124, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1012111159"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1032450876"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -526,6 +559,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{143, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1012111159"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="591208503"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -537,6 +571,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{162, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1012111159"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="293872957"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -548,6 +583,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{181, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1012111159"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="6966250"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -559,6 +595,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{86, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1012111159"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="111735160"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -570,6 +607,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{67, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1012111159"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="235539214"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -581,6 +619,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{10, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1012111159"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="213681070"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -592,6 +631,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{29, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1012111159"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="73695184"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -603,6 +643,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{48, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1012111159"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="497492304"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -614,6 +655,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{105, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1012111159"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="724592674"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -625,6 +667,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{200, 15}, {19, 28}}</string>
 						<reference key="NSSuperview" ref="1012111159"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1044400413"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -636,6 +679,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{17, 20}, {13, 16}}</string>
 						<reference key="NSSuperview" ref="1012111159"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="470722199"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -647,6 +691,7 @@
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{195, 19}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="1012111159"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1004095015"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -668,6 +713,8 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{238, 13}, {75, 30}}</string>
 						<reference key="NSSuperview" ref="1012111159"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -706,6 +753,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{38, 17}, {162, 24}}</string>
 						<reference key="NSSuperview" ref="1012111159"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="266668436"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -730,6 +778,7 @@
 				</array>
 				<string key="NSFrameSize">{320, 53}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="290218089"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="390335511"/>
@@ -1152,7 +1201,56 @@
 			<nil key="sourceID"/>
 			<int key="maxID">66</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">HSContraindicationsViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="absoluteButtonClicked:">id</string>
+						<string key="tempButtonClicked:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="absoluteButtonClicked:">
+							<string key="name">absoluteButtonClicked:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="tempButtonClicked:">
+							<string key="name">tempButtonClicked:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="absoluteButton">UIButton</string>
+						<string key="contraindicationsTableView">UITableView</string>
+						<string key="searchViewContainer">UIView</string>
+						<string key="tempButton">UIButton</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="absoluteButton">
+							<string key="name">absoluteButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="contraindicationsTableView">
+							<string key="name">contraindicationsTableView</string>
+							<string key="candidateClassName">UITableView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="searchViewContainer">
+							<string key="name">searchViewContainer</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="tempButton">
+							<string key="name">tempButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/HSContraindicationsViewController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencies">
